--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@ body {
   box-sizing: border-box; 
 }
 
+/*  login */
+
 .login-section {
   width: 80%;
   height: 600px;
@@ -68,4 +70,27 @@ body {
 
 .login-form button:hover {
   background-color: rgb(154, 86, 221);
+}
+
+/*  wallet */
+
+/*  header */
+
+.wallet-header {
+  width: 100%;
+  height: 80px;
+  background-color: white;
+  box-shadow: 5px 5px 20px rgb(223, 223, 223);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.wallet-bolder {
+  font-weight: bold;
+  color: rgb(154, 86, 221);
+}
+
+.wallet-margin {
+  margin: 30px;
 }
