--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(250, 250, 250);
+  background-color: white;
   margin: 0;
   padding: 0;
   box-sizing: border-box; 
@@ -80,7 +80,7 @@ body {
   width: 100%;
   height: 80px;
   background-color: white;
-  box-shadow: 5px 5px 20px rgb(223, 223, 223);
+  box-shadow: 2px 2px 20px rgb(223, 223, 223);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -93,4 +93,66 @@ body {
 
 .wallet-margin {
   margin: 30px;
+}
+
+/*  form  */
+
+.wallet-form {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  border-bottom: solid rgb(190, 190, 190) 1px;
+  padding-bottom: 20px;
+}
+
+.wallet-form {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.wallet-input {
+  width: 200px;
+  height: 38px;
+  border:solid rgb(154, 86, 221) 1px;
+  background-color: rgb(250, 250, 250);
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.wallet-form button {
+  width: 200px;
+  height: 35px;
+  border-style: none;
+  color: white;
+  background-color: rgb(158, 226, 167);
+  margin: 10px;
+  border-radius: 10px;
+}
+
+table {
+  margin: 0 auto;
+  border-spacing: 20px;
+}
+
+table th {
+  padding: 10px;
+  color: rgb(170, 123, 218);
+}
+
+table td {
+  color: rgb(83, 83, 83);
+  margin: 0 auto;
+  text-align: center;
+  font-size: small;
+  
+}
+
+.wallet-table-button {
+  width: 90px;
+  height: 35px;
+  border-style: none;
+  color: white;
+  background-color: rgb(170, 123, 218);
+  border-radius: 10px;
 }
